--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,7 +2,6 @@
 .navbar{
     height:4rem;
     width:100%;
-    background-color: transparent;
 }
 .content{
     position: relative;
@@ -10,7 +9,7 @@
     display: grid;
     grid-template-rows: 4rem 1fr;
     height: 100%;
-    /* background-color: rgba(0, 0, 0, 0.424); */
+    background-color: rgba(0, 0, 0, 0.424);
 }
 .nav{
     display: grid;
@@ -24,7 +23,7 @@
     justify-items: center;
     align-items: center;
     gap: 2rem;
-    color: black;
+    color: white;
 }
 .border{
     display: grid;
