--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -13,9 +13,21 @@
     height:100vh;
     width: 100%;
 }
+.info::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo negro semi-transparente */
+}
 .textoL{
     width: 20rem;
 }
 .textoR{
     width: 20rem;
+}
+.global{
+    z-index: 1;
 }
