--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,19 +1,19 @@
 .info{
-    position: absolute;
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: center;
     align-items: center;
     color:white;
     text-align: center;
-    background-image: url(../imgs/nieve.jpg);
+    /* background-image: url(../imgs/nieve.jpg);
     background-size: cover;
     top:0;
-    left: 0;
-    height:100vh;
+    left: 0; */
+    height:37rem;
     width: 100%;
 }
-.info::before{
+/* .info::before{
     content: "";
     position: absolute;
     top: 0;
@@ -21,7 +21,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Fondo negro semi-transparente */
-}
+ */
 .textoL{
     width: 20rem;
 }
@@ -31,3 +31,15 @@
 .global{
     z-index: 1;
 }
+.textoL{
+    font-size: 2rem;
+    font-weight: bold;
+}
+/* .images{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100rem;
+    z-index: -1;
+} */
