--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -13,7 +13,7 @@
 }
 .nav{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 10rem;
     align-items: center;
     justify-items: center;
 }
@@ -48,4 +48,5 @@
 body{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden;
 }
