--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -1,12 +1,27 @@
 
 .images {
-    height: 20rem;
+    height: 37rem;
     width: 20rem;
+}
+.images::before{
+    content: '';
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.104);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 37rem;
 }
 
 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: .5rem;
+}
+.slider{
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
 }
