--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,11 +4,12 @@
     width:100%;
 }
 .content{
-    position: relative;
+    position: fixed;
     z-index: 1;
     display: grid;
     grid-template-rows: 4rem 1fr;
-    height: 100%;
+    height: 4rem;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.424);
 }
 .nav{
