--- a/src/styles/drawer.css
+++ b/src/styles/drawer.css
@@ -3,7 +3,7 @@
 }
 .grid{
     display: grid;
-    grid-template-rows: repeat(4, 5rem);
+    grid-template-rows: repeat(5, 4rem);
     padding-top: 1rem;
     align-items: center;
     justify-items: center;
@@ -16,6 +16,7 @@
     height: 4rem;
     width: -webkit-fill-available;
     cursor: pointer;
+    font-weight: bold;
 }
 .lbar:hover{
     transition: .3s;
