--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,45 +1,32 @@
 .info{
     position: relative;
     display: grid;
-    grid-template-columns: 1fr 1fr;
     justify-items: center;
     align-items: center;
     color:white;
     text-align: center;
-    /* background-image: url(../imgs/nieve.jpg);
-    background-size: cover;
-    top:0;
-    left: 0; */
     height:33rem;
     width: 100%;
 }
-/* .info::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fondo negro semi-transparente */
- */
+
 .textoL{
     width: 20rem;
+    display: grid;
+    place-items: center;
+    text-align: center;
 }
 .textoR{
     width: 20rem;
-}
-.global{
-    z-index: 1;
 }
 .textoL{
     font-size: 2rem;
     font-weight: bold;
 }
-/* .images{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100rem;
-    z-index: -1;
-} */
+.global{
+    position: absolute;
+    background-color: #000000b0;
+    height: auto;
+    width: 40rem;
+    display: grid;
+    place-items: center;
+}
