--- a/src/styles/modalsR.css
+++ b/src/styles/modalsR.css
@@ -1,7 +1,7 @@
 .borderI{
     border: 1px solid gray;
     border-radius:.5rem;
-    height: 3rem;
+    height: 2rem;
     width: 15rem;
     padding: .5rem;
 }
@@ -10,7 +10,16 @@
 }
 .alls{
     display: grid;
-    grid-template-rows: repeat(4, 3rem);
+    grid-template-rows: repeat(4, 2rem);
     place-items: center;
-    gap: 1rem;
+    gap: .5rem;
+}
+.globalMod{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.children{
+    display: grid;
+    grid-template-columns:14rem 1fr;
+    place-items: center;
 }
