--- a/src/styles/galeria.css
+++ b/src/styles/galeria.css
@@ -1,6 +1,6 @@
 .cards{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 1rem;
 }
 .todo{
@@ -11,4 +11,5 @@
     width: 100%;
     place-items: center;
     background-color: gray;
+    gap: 2rem;
 }
