--- a/src/main.css
+++ b/src/main.css
@@ -9,6 +9,8 @@
 }
 .css-pv22qu{
     max-width: none !important;
+    width: 55rem !important;
+
 }
 .ant-picker-dropdown{
     z-index: 10000 !important;
