--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -1,7 +1,7 @@
 
 .images {
     height: 37rem;
-    width: 20rem;
+    width: 100%;
 }
 img {
     width: 100%;
@@ -13,4 +13,13 @@ img {
     left: 0;
     top: 0;
     right: 0;
+}
+.slick-prev:before, .slick-next:before{
+    font-size: 0 !important;
+}
+.slick-prev {
+    left: 0 !important;
+}
+.slick-next {
+    right: 0 !important;
 }
