--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -18,9 +18,6 @@
 }
 .imagen{
     height:18rem;
-    -webkit-box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.75);
-    box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.75);
 }
 .infos{
     display: grid;
@@ -39,6 +36,7 @@
     width: 100%;   
     display: grid;
     place-items: center;
+    border-bottom: 1px solid #ccc;
 }
 .textH{
     font-size:2rem;
