--- a/src/styles/turismo.css
+++ b/src/styles/turismo.css
@@ -1,7 +1,9 @@
 .salImg{
-    height: 20rem;
-    width: 20rem;
+    height: 25rem;
+    width: 30rem;
     object-fit: cover;
+    filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.4));
+    border-radius: .3rem;
 }
 .turismo{
     display: grid;
@@ -18,5 +20,9 @@
 }
 .imgSal{
     display: grid;
-    gap: 5rem
+    gap: 1rem
+}
+.textTu{
+    display: grid;
+    grid-template-columns: auto;
 }
