--- a/src/styles/turismo.css
+++ b/src/styles/turismo.css
@@ -11,7 +11,8 @@
     padding: 2rem;
     place-items: center;
     gap: 2rem;
-    border-bottom: 1px solid #ccc;  
+    border-bottom: 1px solid #ccc; 
+    color: #206dc7; 
 }
 .saltoA{
     display: grid;
