--- a/src/main.css
+++ b/src/main.css
@@ -15,6 +15,9 @@
 .ant-picker-dropdown{
     z-index: 10000 !important;
 }
+.css-t3blsc{
+    color: #206dc7;
+}
 html{
     scroll-behavior: smooth;
 }
