--- a/src/main.css
+++ b/src/main.css
@@ -116,6 +116,11 @@ html{
     .textCafe{
         text-align: left;
     }
+    .informacions{
+        display: grid !important;
+        grid-template-rows: 1fr 1fr 1fr 1fr !important;
+        grid-template-columns: none !important;
+    }
 }
 
 
