--- a/src/main.css
+++ b/src/main.css
@@ -120,6 +120,7 @@ html{
         display: grid !important;
         grid-template-rows: 1fr 1fr 1fr 1fr !important;
         grid-template-columns: none !important;
+        place-items: center !important;
     }
 }
 
