--- a/src/styles/galeria.css
+++ b/src/styles/galeria.css
@@ -13,6 +13,6 @@
     place-items: center;
     gap: 2rem;
     border-bottom: 1px solid #ccc;
-    color: #206dc7;
+    color: #003087;
     font-weight: bold;
 }
