--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -30,7 +30,7 @@
     place-items: center;    
     width: 100%;
     gap: 1rem;
-    color: #206dc7;
+    color: #003087;
 }
 .homes{
     padding: 3rem;
