--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -14,7 +14,7 @@
 }
 .informacions{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr 1fr;
     place-items: center;
 }
 .fotLogo{
