--- a/src/styles/nosotros.css
+++ b/src/styles/nosotros.css
@@ -7,7 +7,7 @@
     display: grid;
     height: 30rem;
     align-items: center;
-    color: #206dc7;
+    color: #003087;
 }
 .texUbi{
     font-size: 2rem;
