--- a/src/styles/turismo.css
+++ b/src/styles/turismo.css
@@ -12,7 +12,7 @@
     place-items: center;
     gap: 2rem;
     border-bottom: 1px solid #ccc; 
-    color: #206dc7; 
+    color: #003087; 
 }
 .saltoA{
     display: grid;
