--- a/src/main.css
+++ b/src/main.css
@@ -144,6 +144,9 @@ html{
     html{
         overflow-x: hidden !important;
     }
+    /* .ant-picker-dropdown {
+        top: 5460px !important;
+    } */
 }
 
 
