--- a/src/main.css
+++ b/src/main.css
@@ -207,3 +207,6 @@ body{
 .ant-picker-content:nth-child(2){
     display: none !important;
 }
+.ant-picker-panel:nth-child(2){
+    display: none !important;
+}
