--- a/src/main.css
+++ b/src/main.css
@@ -1,7 +1,9 @@
 .css-79z5gx{
     padding: 0 !important;
 }
-
+.textS{
+    font-size: 2rem !important;
+}
 .css-1u2cvaz{
     display: grid !important;
     grid-template-columns: 1fr;
