--- a/src/main.css
+++ b/src/main.css
@@ -217,3 +217,6 @@ body{
 .ant-picker-content:nth-child(2){
     display: none !important;
 }
+.ant-picker-now-btn{
+    display: none !important;
+}
