--- a/src/styles/modalsR.css
+++ b/src/styles/modalsR.css
@@ -32,7 +32,7 @@
 }
 .cabaI{
     display: grid;
-    grid-template-rows: 8rem 2rem 3rem 3rem ;
+    grid-template-rows: 7rem 2rem 2rem 3rem 3rem ;
 }
 .cabInfo{
     font-size: .9rem;
